--- a/style.css
+++ b/style.css
@@ -3,20 +3,25 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    
 }
+
+
 body {
     width: 100vw;
     height: 100vh;
 }
+
+
+/* ---- CABEÇALHO ---- */
+
 
 header {
     display: inline-block;
     margin-top: 44px;
     margin-left: 76px;
     margin-bottom: 144px;
-
 }
+
 
 a {
     font-weight: 600;
@@ -26,6 +31,7 @@ a {
     padding: 23px;
     cursor: pointer;
 }
+
 
 .login-button {
     width: 130px;
@@ -43,40 +49,39 @@ a {
 
 /*----CONTEUDO----*/
 
+
 main {
     display: flex;
     margin-left: 125px;
-    
 }
 
 
 img {
     width: 568px;
     height: 500px;
-    
-
 }
+
 
 section {
-   margin-left: 86px;
-    
+    margin-left: 86px;
 }
+
 
 h1 {
     font-weight: 900;
     font-size: 100px;
     line-height: 122px;
     color: #515151;
-   
 }
+
 
 h2 {
     font-weight: 500;
     font-size: 58px;
     line-height: 71px;
     color: #515151;
-    
 }
+
 
 p {
     width: 515px;
@@ -88,6 +93,7 @@ p {
     margin-top: 32px;
     margin-bottom: 40px;
 }
+
 
 .explore-button {
     width: 239px;
@@ -101,23 +107,31 @@ p {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     color: #000000;
     cursor: pointer;
-    
 }
+
 
 .explore-button:hover {
     border: 2px solid #ADFF00;
     background-color: #fff;
     color: #ADFF00;
     transition: 0.5s;
-
 }
+
+
 .explore-button:active {
     background-color: rgb(239, 239, 239);
 }
+
+
+/* ---- RESPONSIVO ---- */
+
+
+
 @media (max-width: 1200px) {
     header {
         display: none;
     }
+
     main {
         display: flex;
         flex-direction: column;
@@ -125,14 +139,16 @@ p {
         justify-content: center;
         margin-top: 149px;
         margin-left: 0;
-        
+
     }
+
     img {
         width: 354px;
         height: 317px;
         margin: 0 auto;
-        
+
     }
+
     section {
         margin: 0;
         bottom: 0;
@@ -140,6 +156,7 @@ p {
         flex-direction: column;
         margin-top: 24px;
     }
+
     h1 {
         font-size: 50px;
         line-height: 61px;
@@ -148,18 +165,19 @@ p {
     }
 
     h2 {
-        
+
         font-size: 30px;
         line-height: 37px;
         color: #515151;
         position: relative;
         margin: 0 auto;
-        
+
     }
-    
+
     p {
         display: none;
     }
+
     .explore-button {
         margin: 17px auto 0 auto
     }
